--- a/crane/crane.csproj
+++ b/crane/crane.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="stellar-dotnet-sdk" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="stellar-dotnet-sdk" Version="7.2.25" />
+  </ItemGroup>
 </Project>
